# SDF_Geo

./: .gitignore  API_USAGE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT.md  GITHUB_RELEASE_SUMMARY.md  GITHUB_SETUP.md  INTEGRATION_GUIDE.md  README.md  README_OLD.md  SDFProcessor.cpp  SDFProcessor.h  SDF_README.md  TODO_BEFORE_PUBLISH.md  build.bat  imgui.ini  prepare_github.bat  project_info.bat  run.bat  vcpkg_path.txt
docs/: API_README.md
examples/basic/: example_usage.cpp
examples/demo/: main.cpp
include/: sdf.h
scripts/: build.bat  run.bat  setup.bat
src/: sdf.cpp
